@@ -5,6 +5,9 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Add several PKIX and private extended key usage OIDs.
+     [Steve Henson]
+
   *) Modify the 'ca' program to handle the new extension code. Modify
      openssl.cnf for new extension format, add comments.
      [Steve Henson]
